# sandbox

./: .coverage  .editorconfig  .env.example  .eslintrc.js  .gitattributes  .gitignore  .lintstagedrc.json  .prettierrc  .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  static.yml  tests.yml
.husky/: pre-commit
Vue20260723-CounterComp/: index.html  main.js
css/: main.css
practice/: basic_practice.py  index.html  script.js
practice/backend/php/: insert_user.php  test_db.php
practice/frontend/: index.html
practice/frontend/css/: style.css
practice/frontend/js/: script.js
src/python_test/api/: api_client.py
src/python_test/utils/: year_converter.py
src/your_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_api_client.py  test_year_converter.py
