[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

# 若採 src-layout（推薦），程式碼放在 src/your_project/ 底下，
# 這裡明確指定 where，避免 setuptools 因找不到單一 top-level package 而報錯。
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E,F,W = pycodestyle/pyflakes 基本規則
# I     = import 排序
# UP    = 現代語法建議 (pyupgrade)
# B     = flake8-bugbear，抓常見實務 bug（如 mutable default arg）
# SIM   = flake8-simplify，簡化冗贅寫法
# C4    = flake8-comprehensions，優化 list/dict/set comprehension
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
